fix alignment header clock

--- a/styles/header.css
+++ b/styles/header.css
@@ -5,7 +5,7 @@
 
 #header-content {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
     direction: rtl;
 }
 
